# clock-lock

./: AGENT_EVOLUTION_PLAN.md  AI_Workspace_Project_Doc.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  widget.html
.claude/: settings.local.json
.github/workflows/: build.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  supervision.rs  watcher.rs
src-tauri/src/commands/: agent.rs  fs.rs  memory.rs  mod.rs  settings.rs  shell.rs  tools.rs  window.rs
src-tauri/src/db/: mod.rs
src/components/: AgentChat.vue  AgentPet.vue  BashBlock.vue  ChatMessage.vue  DiffView.vue  FileTree.vue  FileTreeNode.vue  FilesDrawer.vue  MarkdownCodeEditor.vue  MarkdownEditor.vue  OverviewCard.vue  SettingsDrawer.vue  TodoCard.vue  Topbar.vue  WidgetWindow.vue  WorkspaceHome.vue
src/composables/: useHighlighter.ts  useWidgetSync.ts
src/layouts/: AppLayout.vue
src/pages/: SettingsPage.vue  WorkspacePage.vue
src/router/: index.ts
src/stores/: agentStore.ts  settingsStore.ts  supervisionStore.ts  uiStore.ts  workspaceStore.ts
src/styles/: variables.css
src/widget/: WidgetWindow.vue  main.ts
