[package]
name = "clock-lock"
version = "0.1.0"
description = "Clock Lock — AI workspace companion"
authors = ["you"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clock_lock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
git2 = "0.20"
notify = "7"
futures-util = "0.3"
thiserror = "2"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
# Force vendored (bundled) OpenSSL to avoid system pkg-config dependency
# — required for macOS x86_64 cross-compilation from aarch64 runners
openssl = { version = "0.10", features = ["vendored"] }

